--- a/README.adoc
+++ b/README.adoc
@@ -1,19 +1,17 @@
 = Elasticsearch plugin for Russian Phonetic Analysis image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=https://opensource.org/licenses/Apache-2.0]
 Nikolay Papakha
 
-// TODO: Links
-:url-throughput-benchmark: https://github.com/papahigh/
-:url-distribution-benchmark: https://github.com/papahigh/
-:url-unit-tests: https://github.com/papahigh/
-:url-encoding-rules: https://github.com/papahigh/
-:url-releases-page: https://github.com/papahigh/
-:url-issue-tracker: https://github.com/papahigh/
-:url-pull-request: https://github.com/papahigh/
-:url-encoder-project: https://github.com/papahigh/
-:url-esplugin-project: https://github.com/papahigh/
+:url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
+:url-distribution-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/distribution.asciidoc
+:url-unit-tests: https://github.com/papahigh/elasticsearch-russian-phonetics/tree/master/encoder/src/test/java/com/github/papahigh/phonetic/encoder
+:url-encoding-rules: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/encoder/README.asciidoc
+:url-releases-page: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/releases.asciidoc
+:url-issue-tracker: https://github.com/papahigh/elasticsearch-russian-phonetics/issues
+:url-pull-request: https://github.com/papahigh/elasticsearch-russian-phonetics/pulls
+:url-encoder-project: https://github.com/papahigh/elasticsearch-russian-phonetics/tree/master/encoder
+:url-esplugin-project: https://github.com/papahigh/elasticsearch-russian-phonetics/tree/master/esplugin
 
-This plugin brings {url-throughput-benchmark}[fast] and {url-distribution-benchmark}[accurate]
-phonetic analysis of Russian language in Elasticsearch by exposing a token filter named `russian_phonetic` which transforms russian words
+This plugin brings fast and accurate phonetic analysis of Russian language in Elasticsearch by exposing a token filter named `russian_phonetic` which transforms russian words
 to their phonetic representation a so-called phonetic code. These codes are used for matching words and names which sound similar.
 The process of transformation is also known as phonetic encoding and this plugin is able to encode millions of Russian words
 per second with lowest impact on GC among all encoders compared in link:{url-throughput-benchmark}[throughput] benchmarks.
@@ -22,10 +20,10 @@ Encoding algorithm extensively employs russian phonetic and orthographic rules i
 the inconsistency gap between spelling and pronunciation.
 
 .Examples of spelling/pronunciation inconsistency
-[width="60%",cols="m,m",options="header"]
+[width="80%",options="header"]
 |==============================================
 | Spelling       | Pronunciation
-| вдры[зг]       | вдры[ск]
+| вдры[зг]       >| вдры[ск]
 | слове[тск]ий   | славе[цк]ий
 | ла[ндш]афт     | ла[нш]афт
 | п[я]так        | п[и]так
