--- a/esplugin/README.asciidoc
+++ b/esplugin/README.asciidoc
@@ -1,4 +1,4 @@
-= Elasticsearch plugin for Russian phonetic analysis image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=https://opensource.org/licenses/Apache-2.0]
+= Elasticsearch plugin for Russian phonetic analysis
 Nikolay Papakha
 
 
