--- a/releases.asciidoc
+++ b/releases.asciidoc
@@ -6,7 +6,7 @@ The following table shows the compatible versions of Elasticsearch and Russian P
 Please find an appropriate release which corresponds to your elasticsearch version.
 
 .Compatible Releases
-[width="100%",cols=">.^3m,>.^4m,<.^10m",options="header"]
+[width="100%",cols=">.^3,>.^4,<.^10",options="header"]
 |==============================================
 | Plugin Version | Elasticsearch version| URL
 | 6.3.2      | 6.3.2     |
