--- a/benchmark/README.asciidoc
+++ b/benchmark/README.asciidoc
@@ -1,10 +1,9 @@
 = Benchmark reports
 Nikolay Papakha
 
-// TODO: Links
-:url-throughput-benchmark: https://github.com/papahigh/
-:url-distribution-benchmark: https://github.com/papahigh/
-:url-misspellings-benchmark: https://github.com/papahigh/
+:url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
+:url-distribution-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/distribution.asciidoc
+:url-misspellings-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/misspellings_and_typos.asciidoc
 
 :numbered:
 === link:{url-throughput-benchmark}[Encoding throughput]
