--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -50,27 +50,27 @@ Generated java files will be located in `com.github.papahigh.phonetic.generated`
 === Encoders
 
 .Encoders compared
-[width="80%",cols="3m,4m,10m",options="header"]
+[width="80%",cols="3,4,10",options="header"]
 |=========================================================
 |Label |Algorithm |Options
 |Russian1V[4] |Russian Phonetic
-| max_code_len: 4 +
-vowels: encode_first
+| max_code_len: `4` +
+vowels: `encode_first`
 |Russian1V[8] |Russian Phonetic
-| max_code_len: 8 +
-vowels: encode_first
+| max_code_len: `8` +
+vowels: `encode_first`
 |RussianAV[8] |Russian Phonetic
-| max_code_len: 8 +
-vowels: encode_all
+| max_code_len: `8` +
+vowels: `encode_all`
 |RussianAVS[8] |Russian Phonetic
-| max_code_len: 8 +
-vowels: encode_all +
-enable_stemmer: true
+| max_code_len: `8` +
+vowels: `encode_all` +
+enable_stemmer: `true`
 |BMCyrillic |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl,Implementation provided by link:https://lucene.apache.org/[Apache Lucene] with commons-codec:1.0.]
-| languageset: cyrillic +
-maxPhonemes: 1
-|BMRussian |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl] | languageset: russian +
-maxPhonemes: 1
+| languageset: `cyrillic` +
+maxPhonemes: `1`
+|BMRussian |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl] | languageset: `russian` +
+maxPhonemes: `1`
 |Metaphone[4] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: 4
 |Metaphone[8] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: 8
 |Soundex |link:http://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
