--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -1,6 +1,7 @@
 =  Encoding throughput benchmarks
 Nikolay Papakha
 :toc:
+:toc-placement: preamble
 ---
 
 :url-distribution-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/distribution.asciidoc
