--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
-= Elasticsearch plugin for Russian Phonetic Analysis image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=https://opensource.org/licenses/Apache-2.0]
+= Elasticsearch plugin for Russian Phonetic Analysis
 Nikolay Papakha
+
+image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=https://opensource.org/licenses/Apache-2.0]
 
 :url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
 :url-distribution-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/distribution.asciidoc
