--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@ image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link=https://op
 :url-encoder-project: https://github.com/papahigh/elasticsearch-russian-phonetics/tree/master/encoder
 :url-esplugin-project: https://github.com/papahigh/elasticsearch-russian-phonetics/tree/master/esplugin
 
-This plugin provides fast and accurate phonetic analysis of Russian language by exposing a token filter named `russian_phonetic` which transforms russian words
+This plugin provides fast and accurate phonetic analysis of Russian language by exposing a token filter named `*russian_phonetic*` which transforms russian words
 to their phonetic representation, so-called phonetic code. These codes are used for matching words and names which sound similar.
 The process of transformation is also known as phonetic encoding and this plugin is able to encode millions of Russian words
 per second with lowest impact on GC among all encoders compared in link:{url-throughput-benchmark}[throughput] benchmarks.
@@ -136,13 +136,13 @@ behaviour and performance under certain options value.
 ====
 
 
-* `*max_code_len*`
-+
-The maximum length of the phonetic code. Defaults to 8.
-+
 * `*replace*`
 +
 Whether or not the original token should be replaced by the phonetic code. Accepts *true* (default) or *false*.
++
+* `*max_code_len*`
++
+The maximum length of the phonetic code. Defaults to 8.
 +
 * `*enable_stemmer*`
 +
